# advent-of-code-2020

./: pyproject.toml  setup.cfg
day2/: __main__.py  solution.py
day3/: __main__.py  solution.py
day4/: __main__.py  solution.py
day5/: __main__.py  solution.py
day6/: __main__.py  solution.py
day_1/: __init__.py  __main__.py  solution.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py
