[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["Pedro Arvela <pedro.arvela@onfido.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
